--- a/newland_bobby_prototype/stylesheets/layout.css
+++ b/newland_bobby_prototype/stylesheets/layout.css
@@ -27,16 +27,436 @@
 	@media only screen and (max-width: 959px) {}
 
 	/* Tablet Portrait size to standard 960 (devices and browsers) */
-	@media only screen and (min-width: 768px) and (max-width: 959px) {}
+	@media only screen and (min-width: 768px) and (max-width: 959px) {
+
+                   /*body{*/
+                    /*background: yellow;*/
+                    /*}*/
+                    .container{
+                        height:1000px;
+                    }
+                    .sub-menu ul li {
+                        padding-right: 0px;
+                        position:relative;
+                        right: 50px;
+                    }
+                    .switch-btn {
+                        position:relative;
+                        left: 250px;
+                    }
+                    .search-top {
+                        display: none;
+                    }
+                    .nav {
+                        position:relative;
+                        right:130px;
+                    }
+                    .join-now {
+                        display: none;
+                    }
+                    .signup_btn {
+                        left:440px;
+                    }
+                    .signin-link {
+                        left:440px;
+                        top:-220px;
+                    }
+                    .left-side-content {
+                        left:-100px;
+                    }
+                    .right-side-container > img {
+                        position: relative;
+                        left:-100px;
+                    }
+                    .item-list {
+                        right:40px;
+                    }
+                    .detail-info {
+                        position: relative;
+                        left:100px;
+                    }
+                    .info-container {
+                        right: 170px;
+                        top:110px;
+                    }
+                    .detail-image img {
+                        right:430px;
+                    }
+                    .detail-image > h4 {
+                        right:140px;
+                    }
+                    .detail-list {
+                        left:-330px;
+                        top:480px;
+                    }
+                    .buy-btn{
+                        left:50px;
+                        top:420px;
+                    }
+                    .wishlist-link {
+                        left:50px;
+                        top:410px;
+                    }
+                    .add-btn img {
+                        left:150px;
+                    }
+                    .add-text {
+                        left:140px;
+                    }
+                    .reg-form {
+                        left:150px;
+                    }
+                    .login-help {
+                        left:175px;
+                    }
+
+
+
+
+
+
+
+
+    }
 
 	/* All Mobile Sizes (devices and browser) */
-	@media only screen and (max-width: 767px) {}
+	@media only screen and (max-width: 767px) {
+
+
+    }
 
 	/* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
-	@media only screen and (min-width: 480px) and (max-width: 767px) {}
+	@media only screen and (min-width: 480px) and (max-width: 767px) {
+                        /*body{*/
+                            /*background: green;*/
+                        /*}*/
+                    .container{
+                        height:1600px;
+                    }
+                    .sub-menu ul li {
+                        padding-right: 0px;
+                        position:relative;
+                        right: 70px;
+                       font-size: 30px;
+                        display:block;
+                        text-align: center;
+                        top:170px;
+                        color: #000000;
+                        line-height: 30px;
+                    }
+                    .sub-menu ul li > a {
+                        color: #000000;
+                    }
+                    .switch-btn {
+                        position:relative;
+                        left: 20px;
+                        top:-540px;
+                    }
+                    .all-cases {
+                        position: relative;
+                        left:30px;
+                    }
+                    .case-pics-row-1{
+                        position: relative;
+                        top:450px;
+                    }
+                    .search-top {
+                        display: none;
+                    }
+                    .nav {
+                        position:relative;
+                        right:70px;
+                        top:162px;
+                        z-index: 2;
+                    }
+                    .join-now {
+                        display: none;
+                    }
+                    .signup_btn {
+                        left:160px;
+                        top: -370px;
+                    }
+                    .signin-link {
+                        left:-30px;
+                        top:820px;
+                    }
+                    .signin-link-2 {
+                        left:100px;
+                        top:100px;
+                    }
+                    .signin-link-3 {
+                        position: relative;
+                        top: 70px;
+                    }
+                    .left-side-content {
+                        left:-60px;
+                        top:600px;
+                    }
+                    .right-side-container > img {
+                        position: relative;
+                        left:-70px;
+                        top:350px;
+                    }
+                    .item-list {
+                        right:40px;
+                        top: 700px;
+                    }
+                    .detail-info {
+                        position: relative;
+                        left:10px;
+                        top:150px;
+                    }
+                    .info-container {
+                        right: 70px;
+                        top:520px;
+                    }
+                    .detail-image img {
+                        right:60px;
+                        top:525px;
+                    }
+                    .detail-image > h4 {
+                        right:-150px;
+                        top:1360px;
+                    }
+                    .detail-list {
+                        left:-90px;
+                        top:540px;
+                    }
+                    .buy-btn{
+                        left:90px;
+                        top:670px;
+                    }
+                    .wishlist-link {
+                        left:90px;
+                        top:650px;
+                    }
+                    .add-btn img {
+                        left:30px;
+                        top:785px;
+                    }
+                    .wish-items {
+                        position: relative;
+                        left:100px;
+                        top:720px;
+                    }
+                    .add-text {
+                        left:20px;
+                        top:740px;
+                    }
+                    .reg-form {
+                        left:150px;
+                    }
+                    .login-help {
+                        left:150px;
+                        top:700px;
+                    }
+                    .reg-form h1,.reg-form h2 {
+                        position: relative;
+                        top:-180px;
+                        right: -95px;
+                        font-size: 20px;
+                    }
+                    .reg-form {
+                        top: 400px;
+                        left:-40px;
+                    }
+                    .reg-form > form:nth-child(3) > input:nth-child(4){
+                        position: relative;
+                        left: 100px;
+
+                    }
+                    .reg-form > form:nth-child(3){
+                        position: relative;
+                        top:100px;
+                    }
+
+                    .benefits {
+                        top:840px;
+                        left:120px;
+                    }
+
+
+    }
 
 	/* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
-	@media only screen and (max-width: 479px) {}
+@media only screen and (max-width: 479px) {
+
+                    /*body{*/
+                        /*background: orange;*/
+                    /*}*/
+                    .container{
+                        height:3000px;
+                    }
+                    .sub-menu ul li {
+                        padding-right: 0px;
+                        position:relative;
+                        right: 70px;
+                        font-size: 30px;
+                        display:block;
+                        text-align: center;
+                        top:180px;
+                        color: #000000;
+                        line-height: 30px;
+                    }
+                    .sub-menu ul li > a {
+                        color: #000000;
+                    }
+                    .switch-btn {
+                        position:relative;
+                        left: 0px;
+                        top:-1390px;
+                    }
+                    .all-cases {
+                        position: relative;
+                        left:30px;
+                    }
+                    .case-pics-row-1{
+                        position: relative;
+                        top:450px;
+                        left:30px;
+                    }
+                    .search-top {
+                        display: none;
+                    }
+                    .nav {
+                        position:relative;
+                        right:7px;
+                        top:30px;
+                        z-index: 2;
+                    }
+                    .join-now {
+                        display: none;
+                    }
+                    .logo {
+                        position: relative;
+                        left: 0px;
+                    }
+                    .signup_btn {
+                        left:180px;
+                        top: -370px;
+                    }
+                    .signin-link {
+                        left:240px;
+                        top:-520px;
+                    }
+                    .signin-link-2 {
+                        left:120px;
+                        top:80px;
+                    }
+                    .signin-link-3 {
+                        position: relative;
+                        top: 100px;
+                        left:120px;
+                    }
+                    .left-side-content {
+                        left:-120px;
+                        top:600px;
+                    }
+                    .right-side-container > img {
+                        position: relative;
+                        left:-120px;
+                        top:240px;
+                    }
+                    .reg-form > form:nth-child(3) > input:nth-child(3) {
+                        position: relative;
+                        width:230px;
+                        left: 105px;
+                    }
+                    .item-list {
+                        right:20px;
+                        top: 650px;
+                        width:230px;
+                    }
+                    .detail-info {
+                        position: relative;
+                        left:10px;
+                        top:50px;
+                    }
+                    .info-container {
+                        width:250px;
+                        right: 30px;
+                        top:520px;
+                    }
+                    .detail-image img {
+                        right:25px;
+                        top:625px;
+                        width: 250px;
+                        height: auto;
+                    }
+                    .detail-image > h4 {
+                        right:0px;
+                        top:1360px;
+                    }
+                    .detail-list {
+                        left:-40px;
+                        top:540px;
+                    }
+                    .buy-btn{
+                        left:10px;
+                        top:600px;
+                    }
+                    .wishlist-link {
+                        left:10px;
+                        top:600px;
+                    }
+                    .add-btn img {
+                        left:-110px;
+                        top:870px;
+                    }
+                    .wish-items {
+                        position: relative;
+                        left:30px;
+                        top:720px;
+                    }
+                    .add-text {
+                        left:25px;
+                        top:740px;
+                    }
+                    .reg-form {
+                        left:50px;
+                    }
+                    .login-help {
+                        left:20px;
+                        top:730px;
+                    }
+                    .reg-form h1,.reg-form h2 {
+                        position: relative;
+                        top:-180px;
+                        right: -95px;
+                        font-size: 20px;
+                    }
+                    .reg-form {
+                        top: 400px;
+                        left:-70px;
+                        width: 230px;
+                    }
+                    .reg-form > form:nth-child(3) > input:nth-child(4){
+                        position: relative;
+                        left: 110px;
+                        width: 200px;
+
+                    }
+                    .reg-form > form:nth-child(3){
+                        position: relative;
+                        top:110px;
+                    }
+
+                    .benefits {
+                        top:890px;
+                        left:40px;
+                    }
+                    .all-cases h1, .all-cases h2 {
+                        position: relative;
+                        top:190px;
+                        line-height: 25px;
+                        right:20px;
+                    }
+                    .wishlist-title {
+                        position: relative;
+                        top: 0px;
+                    }
+
+}
 
 
 /* #Font-Face
